# mypy-protobuf

./: .gitignore  BUILD.bazel  WORKSPACE
go/src/proto/google/protobuf/: BUILD.bazel
go/src/proto/mypy/: BUILD.bazel
go/src/protoc-gen-mypy/: BUILD.bazel  main.go
