load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "any.go",
        "any.pb.go",
        "doc.go",
        "duration.go",
        "duration.pb.go",
        "empty.pb.go",
        "struct.pb.go",
        "timestamp.go",
        "timestamp.pb.go",
        "wrappers.pb.go",
    ],
    importpath = "github.com/dropbox/mypy-protobuf/go/src/proto/google/protobuf",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//proto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "any_test.go",
        "duration_test.go",
        "timestamp_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
    ],
)
